# third-party-cpp-deps

./: CMakeLists.txt  README.md  build.sh  third_party_cpp_deps.cmake  toolchain.cmake
example/: CMakeLists.txt
example/global-deps/: CMakeLists.txt  main.cpp
example/per-target-deps/: CMakeLists.txt
